feat: complete layout setup

--- a/styles/global.css
+++ b/styles/global.css
@@ -11,8 +11,12 @@ body {
 	min-height: 100svh;
 	font-size: 100%;
 	line-height: 1.6;
-	overflow-x: hidden;
 	text-rendering: optimizeLegibility;
+}
+
+img {
+	max-height: 100%;
+	display: block;
 }
 
 /* Fonts */
