--- a/styles/global.css
+++ b/styles/global.css
@@ -19,18 +19,49 @@ img {
 	display: block;
 }
 
+.error {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	font-family: "Open Sans", sans-serif;
+	color: var(--danger);
+	font-weight: 400;
+	font-size: 0.75rem;
+
+	& img {
+		display: none;
+		width: 1rem;
+		height: 1rem;
+	}
+
+	& p {
+		display: none;
+	}
+}
+
+fieldset {
+	border: 0;
+}
+
+textarea {
+	resize: none;
+}
+
+input[type="radio"] {
+	appearance: none; /* Remove a aparência padrão */
+	-webkit-appearance: none; /* Remove a aparência no Safari */
+}
+
 /* Fonts */
 @font-face {
 	font-family: "Leckerli One";
 	src: url(../fonts/LeckerliOne.ttf) format("truetype");
-	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Baloo 2";
 	src: url(../fonts/Baloo2.ttf) format("truetype");
-	font-weight: 700;
 	font-style: normal;
 }
 
