--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,24 +1,42 @@
-.container {
-	min-height: 100svh;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	padding: 1.25rem;
-	background-color: var(--shape-background);
+body {
+	background: var(--shape-background);
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 	gap: 1.25rem;
-}
-
-main {
-	background-color: var(--shape-body);
-	border-radius: 0.75rem;
-	padding: 5rem;
+	padding: 1.25rem;
 }
 
 aside {
-	display: flex;
-	justify-self: end;
+	border-radius: 0.75rem;
 	width: 25rem;
 	height: 45.5rem;
+	background: url(../assets/Background.png) center / cover no-repeat;
+}
+
+main {
+	display: flex;
+	width: 51.25rem;
+	height: 100%;
+	padding-block: 5rem;
+	flex-direction: column;
+	align-items: center;
+	gap: 2.5rem;
 	border-radius: 0.75rem;
-	background: url(../assets/Background.png) no-repeat center/cover;
-	padding: 2rem;
+	background: var(--shape-body);
+}
+
+.main-wrapper {
+	display: flex;
+	width: 35rem;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 3rem;
+
+	& h2 {
+		color: var(--text-heading);
+		font-family: "Baloo 2", sans-serif;
+		font-size: 28px;
+		font-weight: 700;
+	}
 }
