--- a/styles/forms/event.css
+++ b/styles/forms/event.css
@@ -30,6 +30,11 @@
 	grid-template-columns: 1fr 1fr;
 	gap: 1rem;
 
+	& input[type="text"]:hover,
+	textarea:hover {
+		outline: 1px solid var(--brand-light);
+	}
+
 	& label + input:focus,
 	label + textarea:focus {
 		outline: 1px solid var(--brand-light);
@@ -69,38 +74,38 @@
 		grid-row: 1;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.35rem;
 	}
 	.start {
 		grid-row: 2;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.35rem;
 	}
 	.end {
 		grid-row: 2;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.35rem;
 	}
 	.type {
 		grid-row: 3;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.3rem;
 	}
 	.location {
 		grid-row: 3;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.35rem;
 	}
 	.description {
 		grid-column: 1/ 3;
 		grid-row: 4;
 		display: flex;
 		flex-direction: column;
-		gap: 0.75rem;
+		gap: 0.35rem;
 
 		& textarea {
 			height: 8.5rem;
@@ -166,6 +171,6 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		transition: background-color 0.6s ease;
+		transition: background-color 0.3s;
 	}
 }
