--- a/styles/global.css
+++ b/styles/global.css
@@ -44,12 +44,44 @@ fieldset {
 	border: 0;
 }
 
+ul {
+	list-style: none;
+}
+
 textarea {
 	resize: none;
 }
 input {
 	appearance: none;
 	-webkit-appearance: none;
+}
+
+.terms + button {
+	display: flex;
+	height: 3rem;
+	padding: 0.25rem 1.25rem;
+	justify-content: center;
+	align-items: center;
+	align-self: flex-end;
+	gap: 0.75rem;
+	border-radius: 0.5rem;
+	background: #1d6fb6;
+	border: none;
+	color: #f9f9f9;
+	font-family: "Open Sans", sans-serif;
+	font-size: 1rem;
+	font-weight: 600;
+	transition: background-color 0.4s;
+	cursor: pointer;
+
+	& img {
+		width: 1.25rem;
+		height: 1.25rem;
+	}
+}
+
+.terms + button:hover {
+	background-color: #3487cf;
 }
 
 /* Fonts */
